--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://LuongTuan1704.github.io/Maditian/",
+  "homepage": "https://luongtuan1704.github.io/Maditian/",
   "name": "maditian-web",
   "version": "0.1.0",
   "private": true,
